big refactor, remove deprecated classes