@@ -1,11 +1,10 @@
 package grapefruit.command.runtime.dispatcher;
 
-import grapefruit.command.runtime.Command;
 import grapefruit.command.runtime.CommandException;
 import grapefruit.command.runtime.argument.CommandArgument;
-import grapefruit.command.runtime.argument.binding.BoundArgument;
 import grapefruit.command.runtime.argument.mapper.ArgumentMapper;
 import grapefruit.command.runtime.argument.modifier.ArgumentModifier;
+import grapefruit.command.runtime.argument.modifier.ModifierBlueprint;
 import grapefruit.command.runtime.dispatcher.auth.CommandAuthorizationException;
 import grapefruit.command.runtime.dispatcher.auth.CommandAuthorizer;
 import grapefruit.command.runtime.dispatcher.condition.CommandCondition;
@@ -16,6 +15,7 @@ import grapefruit.command.runtime.dispatcher.input.StringReaderImpl;
 import grapefruit.command.runtime.dispatcher.syntax.CommandSyntaxException;
 import grapefruit.command.runtime.dispatcher.syntax.DuplicateFlagException;
 import grapefruit.command.runtime.dispatcher.tree.CommandGraph;
+import grapefruit.command.runtime.generated.ArgumentMirror;
 import grapefruit.command.runtime.generated.CommandMirror;
 import grapefruit.command.runtime.util.FlagGroup;
 import grapefruit.command.runtime.util.Registry;
@@ -24,21 +24,19 @@ import grapefruit.command.runtime.util.key.Key;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
 import java.util.Queue;
-import java.util.function.Function;
 
+import static grapefruit.command.runtime.argument.CommandArgument.Flag.PRESENCE_FLAG_TYPE;
+import static grapefruit.command.runtime.dispatcher.InternalContextKeys.COMMAND;
 import static grapefruit.command.runtime.dispatcher.syntax.CommandSyntax.LONG_FLAG_FORMAT;
 import static grapefruit.command.runtime.dispatcher.syntax.CommandSyntax.SHORT_FLAG_FORMAT;
 import static grapefruit.command.runtime.dispatcher.syntax.CommandSyntax.SHORT_FLAG_PREFIX;
 import static grapefruit.command.runtime.util.StringUtil.startsWithIgnoreCase;
 import static java.util.Objects.requireNonNull;
-import static java.util.stream.Collectors.partitioningBy;
 
 final class CommandDispatcherImpl implements CommandDispatcher {
     private final CommandGraph commandGraph = new CommandGraph();
-    private final Registry<CommandMirror, CommandInfo> knownCommands = Registry.create(Registry.DuplicateStrategy.reject());
     private final CommandAuthorizer authorizer;
     private final Registry<Key<?>, ArgumentMapper<?>> argumentMappers;
     private final Registry<Key<?>, CommandCondition> conditions;
@@ -61,19 +59,17 @@ final class CommandDispatcherImpl implements CommandDispatcher {
         requireNonNull(commands, "commands cannot be null");
         for (CommandMirror command : commands) {
             /*
-             * Gather the runtime command information first. If this
-             * fails due to a missing ArgumentMapper or CommandCondition,
+             * Gather runtime command information first. If this fails
+             * due to a missing ArgumentMapper or CommandCondition,
              * we don't want to proceed any further.
              */
-            CommandInfo commandInfo = buildCommand(command);
+            CommandDefinition commandDef = buildCommand(command);
             // The registartion handler is invoked first
             boolean shouldProceed = this.registrationHandler.register(command);
             // Got false, skipping registration
             if (!shouldProceed) return;
             // If the process wasn't interrupted, insert the command into the tree
-            this.commandGraph.insert(command);
-            // Cache the gathered command information
-            this.knownCommands.store(command, commandInfo);
+            this.commandGraph.insert(command.route(), commandDef);
         }
     }
 
@@ -86,57 +82,89 @@ final class CommandDispatcherImpl implements CommandDispatcher {
             // Got false, skipping registration
             if (!shouldProceed) return;
             // If the process wasn't interrupted, delete the command from the tree
-            this.commandGraph.delete(command);
-            // Remove cached argument chain
-            this.knownCommands.remove(command);
+            this.commandGraph.delete(command.route());
         }
     }
 
-    // Gather the runtime information of a command
-    private CommandInfo buildCommand(CommandMirror command) {
-        // Bind command arguments to argument mappers
-        Map<Boolean, List<BoundArgument<?>>> argumentBindings = command.arguments()
-                .stream()
-                // Bake modifiers
-                .peek(x -> x.modifierChain().bake($ -> this.modifiers.get($.key()).orElseThrow(
-                        () -> new IllegalArgumentException("Could not find modifier factory for key '%s'".formatted($.key()))
-                ).createFromContext($.context())))
-                .map(this::bindArgument)
-                .collect(partitioningBy(x -> x.argument().isFlag()));
+    // Gather runtime command information
+    @SuppressWarnings("unchecked")
+    private CommandDefinition buildCommand(CommandMirror command) {
+        List<CommandArgument<?>> arguments = new ArrayList<>();
+        List<CommandArgument.Flag<?>> flags = new ArrayList<>();
 
-        // Collect command conditions
-        List<CommandCondition> conditions = command.spec()
-                .conditions()
-                .stream()
-                .map(x -> this.conditions.get(Key.of(x)))
-                .map(x -> x.orElseThrow(() -> new IllegalStateException("No condition was found for '%s'".formatted(x))))
+        // Gather runtime argument information
+        for (ArgumentMirror<?> mirror : command.arguments()) {
+            if (mirror instanceof ArgumentMirror.Flag<?> flag) {
+                CommandArgument.Flag<?> builtFlag = flag.key().type().equals(PRESENCE_FLAG_TYPE)
+                        ? buildPresenceFlag((ArgumentMirror.Flag<Boolean>) flag)
+                        : buildValueFlag(flag);
+
+                flags.add(builtFlag);
+            } else {
+                arguments.add(buildArgument(mirror));
+            }
+        }
+
+        // Gather runtime condition information
+        List<CommandCondition> conditions = command.conditions().stream()
+                .map(x -> this.conditions.get(Key.of(x)).orElseThrow(() -> new IllegalStateException(
+                        "Could not find command condition matching %s".formatted(x))
+                ))
                 .toList();
 
-        return new CommandInfo(command, argumentBindings.get(false), argumentBindings.get(true), conditions);
+        return CommandDefinition.builder()
+                .permission(command.permission().orElse(null))
+                .arguments(arguments)
+                .flags(flags)
+                .conditions(conditions)
+                .action(command.action())
+                .build();
     }
 
-    // This method exists to make working with generics less of a pain.
     @SuppressWarnings("unchecked")
-    private <T> BoundArgument<T> bindArgument(CommandArgument<T> argument) {
-        /*
-         * Retrieve argument mapper. A correct mapper is assumed to be present
-         * in the registry, hence we throw an error if that turns out not to be
-         * the case. No mapper being present for this argument's mapper key would
-         * indicate an improper/incomplete dispatcher configurer, which is a user
-         * error.
-         */
-        Function<Key<T>, ArgumentMapper<T>> mapperAccess = key -> (ArgumentMapper<T>) this.argumentMappers.get(key)
-                .orElseThrow(() -> new IllegalStateException("Could not find argument mapper matching '%s'. Requested by: '%s'".formatted(
-                        argument.mapperKey(), argument
-                )));
-
-        return argument.bind(mapperAccess);
+    private <T> ArgumentMapper<T> requireMapper(ArgumentMirror<T> mirror) {
+        Key<T> key = mirror.mapperKey();
+        return (ArgumentMapper<T>) this.argumentMappers.get(key).orElseThrow(() -> new IllegalStateException(
+                "Could not find argument mapper for key '%s', requested by argument '%s'".formatted(key, mirror)
+        ));
     }
 
-    private CommandInfo requireInfo(CommandMirror command) {
-        return this.knownCommands.get(command).orElseThrow(() -> new IllegalStateException(
-                "No cached information was found for command '%s' The dispatcher is not configured properly.".formatted(command)
-        ));
+    @SuppressWarnings("unchecked")
+    private <T> List<ArgumentModifier<T>> collectModifiers(ArgumentMirror<T> mirror) {
+        List<ArgumentModifier<T>> modifiers = new ArrayList<>();
+        for (ModifierBlueprint modifier : mirror.modifiers()) {
+            ArgumentModifier.Factory<T> factory = (ArgumentModifier.Factory<T>) this.modifiers.get(modifier.key())
+                    .orElseThrow(() -> new IllegalStateException("Could not find argument modifier for key '%s', requested by argument '%s'".formatted(
+                            modifier.key(), mirror
+                    )));
+
+            modifiers.add(factory.createFromContext(modifier.context()));
+        }
+
+        // Create immutable copy
+        return List.copyOf(modifiers);
+    }
+
+    private <T> CommandArgument<T> buildArgument(ArgumentMirror<T> mirror) {
+        return CommandArgument.required(mirror.name(), mirror.key())
+                .withMapper(requireMapper(mirror))
+                .withModifiers(collectModifiers(mirror))
+                .build();
+
+    }
+
+    private CommandArgument.Flag<Boolean> buildPresenceFlag(ArgumentMirror.Flag<Boolean> mirror) {
+        return CommandArgument.presenceFlag(mirror.name(), mirror.key())
+                .shorthand(mirror.shorthand())
+                .build();
+    }
+
+    private <T> CommandArgument.Flag<T> buildValueFlag(ArgumentMirror.Flag<T> mirror) {
+        return CommandArgument.valueFlag(mirror.name(), mirror.key())
+                .shorthand(mirror.shorthand())
+                .withMapper(requireMapper(mirror))
+                .withModifiers(collectModifiers(mirror))
+                .build();
     }
 
     // Invoke command listeners
@@ -162,10 +190,10 @@ final class CommandDispatcherImpl implements CommandDispatcher {
         if (search instanceof CommandGraph.SearchResult.Failure failure) throw failure.cause();
 
         // The search was successful, we can extract the command instance
-        CommandMirror command = ((CommandGraph.SearchResult.Success) search).command();
+        CommandDefinition command = ((CommandGraph.SearchResult.Success) search).command();
 
         // Save the command instance so that we can retrieve it later if needed
-        context.put(InternalContextKeys.COMMAND, command);
+        // context.put(InternalContextKeys.COMMAND, command);
         if (!invokeListeners(ExecutionStage.PRE_PROCESS, context)) return;
 
         // Check permissions
@@ -176,35 +204,32 @@ final class CommandDispatcherImpl implements CommandDispatcher {
         // Throw an exception if the user lacks sufficient permissions
         if (!mayExecute) throw new CommandAuthorizationException(permission.orElseThrow());
 
-        // Retrieve command info
-        CommandInfo commandInfo = requireInfo(command);
         // Check conditions
-        for (CommandCondition condition : commandInfo.conditions()) {
+        for (CommandCondition condition : command.conditions()) {
             // If the result is false, we throw an exception.
             if (!condition.evaluate(context)) throw new UnfulfilledConditionException(condition);
         }
 
         // Parse command arguments and store the results in the current context
-        ParseResult parseResult = parseArguments(context, input, commandInfo);
+        ParseResult parseResult = parseArguments(context, command, input);
         // Rethrow captured exception if it exists
         parseResult.rethrowCaptured();
 
         if (!invokeListeners(ExecutionStage.PRE_EXECUTION, context)) return;
         // Finally, invoke the command
-        command.action().run(context);
+        command.invoke(context);
 
         invokeListeners(ExecutionStage.POST_EXECUTION, context);
     }
 
-    private ParseResult parseArguments(CommandContext context, StringReader input, CommandInfo commandInfo) {
-        ParseResult.Builder builder = ParseResult.parsing(commandInfo);
-        Command command = commandInfo.command();
+    private ParseResult parseArguments(CommandContext context, CommandDefinition command, StringReader input) {
+        ParseResult.Builder builder = ParseResult.parsing(command);
         try {
             String arg;
             while ((arg = input.peekSingle()) != null) {
                 builder /* .consumed() */.consuming(arg);
                 // Attempt to parse "arg" into a group of flags
-                Optional<FlagGroup> flagGroup = FlagGroup.attemptParse(arg, commandInfo.flags());
+                Optional<FlagGroup> flagGroup = FlagGroup.attemptParse(arg, command.flags());
                 // Successfully parsed at least one flag
                 if (flagGroup.isPresent()) {
                     // Read a single argument from the input so that the flag argument's mapper
@@ -212,29 +237,28 @@ final class CommandDispatcherImpl implements CommandDispatcher {
                     // process the --flagname input part).
                     input.readSingle();
                     // Process each flag in this group
-                    for (BoundArgument<?> flag : flagGroup.orElseThrow()) {
-                        CommandArgument<?> argument = flag.argument();
+                    for (CommandArgument.Flag<?> flag : flagGroup.orElseThrow()) {
                         builder.consuming(input.peekSingle()).consuming(flag);
 
-                        if (context.contains(argument.key())) {
+                        if (context.contains(flag.key())) {
                             // This means that the flag is already been set
-                            throw new DuplicateFlagException(argument.name());
+                            throw new DuplicateFlagException(flag.name());
                         }
 
-                        flag.consume(context, input);
+                        consumeArgument(flag, context, input);
                         builder.consumed();
                     }
 
                 } else {
-                    // Attempt to find the first unconsumed required command argument
-                    BoundArgument<?> firstRequired = commandInfo.arguments()
+                    // Attempt to find the first unseen required command argument
+                    CommandArgument<?> firstUnseen = command.arguments()
                             .stream()
-                            .filter(x -> !context.contains(x.argument().key()))
+                            .filter(x -> !context.contains(x.key()))
                             .findFirst()
-                            .orElseThrow(() -> CommandSyntaxException.from(input, command, CommandSyntaxException.Reason.TOO_MANY_ARGUMENTS));
+                            .orElseThrow(() -> CommandSyntaxException.from(input, context.nullable(COMMAND), command, CommandSyntaxException.Reason.TOO_MANY_ARGUMENTS));
 
-                    builder.consuming(firstRequired);
-                    firstRequired.consume(context, input);
+                    builder.consuming(firstUnseen);
+                    consumeArgument(firstUnseen, context, input);
                     if (arg.endsWith(" ")) builder.consumed();
                 }
             }
@@ -246,18 +270,26 @@ final class CommandDispatcherImpl implements CommandDispatcher {
              */
             for (CommandArgument<?> argument : command.arguments()) {
                 if (!argument.isFlag() && !context.contains(argument.key())) {
-                    throw CommandSyntaxException.from(input, command, CommandSyntaxException.Reason.TOO_FEW_ARGUMENTS);
+                    throw CommandSyntaxException.from(input, context.nullable(COMMAND), command, CommandSyntaxException.Reason.TOO_FEW_ARGUMENTS);
                 }
             }
 
             // Check if we have consumed all arguments
-            if (input.hasNext()) throw CommandSyntaxException.from(input, command, CommandSyntaxException.Reason.TOO_MANY_ARGUMENTS);
+            if (input.hasNext()) throw CommandSyntaxException.from(input, context.nullable(COMMAND), command, CommandSyntaxException.Reason.TOO_MANY_ARGUMENTS);
         } catch (CommandException ex) {
             builder.capture(ex);
         }
 
-        // return parseInfo;
         return builder.build();
+    }
+
+    private <T> void consumeArgument(CommandArgument<T> argument, CommandContext context, StringReader input) throws CommandException {
+        // First, run the argument mapper
+        T mappedValue = argument.mapper().tryMap(context, input);
+        // Then, we apply all argument modifiers
+        for (ArgumentModifier<T> modifier : argument.modifiers()) mappedValue = modifier.apply(mappedValue);
+        // Finally, store the resulting value in the command context
+        context.put(argument.key(), mappedValue);
     }
 
     @Override
@@ -291,12 +323,10 @@ final class CommandDispatcherImpl implements CommandDispatcher {
         }
 
         // Command can safely be extracted
-        CommandMirror command = ((CommandGraph.SearchResult.Success) searchResult).command();
-        // Retrieve argument chain
-        CommandInfo commandInfo = requireInfo(command);
+        CommandDefinition command = ((CommandGraph.SearchResult.Success) searchResult).command();
 
         // Parse command
-        ParseResult parseResult = parseArguments(context, input, commandInfo);
+        ParseResult parseResult = parseArguments(context, command, input);
         // If either DuplicateFlagException or UnrecognizedFlagException was thrown,
         // return an empty list.
         if (
@@ -340,16 +370,16 @@ final class CommandDispatcherImpl implements CommandDispatcher {
         }
 
         // Select the first unseen argument. Required arguments take precedence over flags.
-        BoundArgument<?> firstUnseen = parseResult.remaining().isEmpty()
-                ? parseResult.remainingFlags().get(0)
-                : parseResult.remaining().get(0);
+        CommandArgument<?> firstUnseen = parseResult.remaining().isEmpty()
+                ? parseResult.remainingFlags().getFirst()
+                : parseResult.remaining().getFirst();
 
         /*
          * Select argument to create completions for. If suggestNext evaluates
          * to true (explained above), we don't care about the ParseInfo#argument,
          * otherwise prefer that over firstUnseen, if it's present.
          */
-        BoundArgument<?> argument = parseResult.lastUnsuccessfulArgument().orElse(firstUnseen);
+        CommandArgument<?> argument = parseResult.lastUnsuccessfulArgument().orElse(firstUnseen);
 
         // The user input to create completions based on.
         String arg = completeNext ? remaining : parseResult.lastInput().orElse(remaining);
@@ -357,9 +387,9 @@ final class CommandDispatcherImpl implements CommandDispatcher {
         // Accumulate completions into this list
         List<String> base = new ArrayList<>();
 
-        if (argument.argument().isFlag()) {
-            if (argument.argument().asFlag().isPresenceFlag() && completeNext) {
-                base.addAll(formatFlags(List.of(firstUnseen)));
+        if (argument.isFlag()) {
+            if (argument.asFlag().isPresence() && completeNext) {
+                base.addAll(formatFlag(firstUnseen.asFlag()));
             } else {
                 // TODO only include these suggestions, if a) completeNext is true or b) the flag name (or group) has been completed already
                 base.addAll(argument.mapper().complete(context, arg));
@@ -367,13 +397,13 @@ final class CommandDispatcherImpl implements CommandDispatcher {
                 if (arg.length() > 1 && Character.isAlphabetic(arg.charAt(1))) {
                     // Start completing a flag group
                     parseResult.remainingFlags().stream()
-                            .map(x -> x.argument().asFlag().shorthand())
+                            .map(x -> x.asFlag().shorthand())
                             .filter(x -> arg.indexOf(x) == -1) // Only want to suggest flags that aren't already present in the group
                             .map(x -> "%s%s".formatted(arg, x))
                             .forEach(base::add);
                 }
-
             }
+
         } else {
             base.addAll(argument.mapper().complete(context, arg));
 
@@ -388,12 +418,15 @@ final class CommandDispatcherImpl implements CommandDispatcher {
                 .toList();
     }
 
-    private List<String> formatFlags(Collection<BoundArgument<?>> flags) {
+    private List<String> formatFlags(Collection<CommandArgument.Flag<?>> flags) {
         return flags.stream()
-                .map(BoundArgument::argument)
                 .map(CommandArgument::asFlag)
-                .map(x -> List.of(SHORT_FLAG_FORMAT.apply(x.shorthand()), LONG_FLAG_FORMAT.apply(x.name())))
+                .map(this::formatFlag)
                 .flatMap(Collection::stream)
                 .toList();
+    }
+
+    private List<String> formatFlag(CommandArgument.Flag<?> flag) {
+        return List.of(SHORT_FLAG_FORMAT.apply(flag.shorthand()), LONG_FLAG_FORMAT.apply(flag.name()));
     }
 }
